...
            variant="secondary"
            onPress={() => navigation.navigate("Goals")}
          />
        </View>
        <View style={styles.logoutButton}>
          <Button
            testID="logout-button"
            label="Sair"
            variant="secondary"
            loading={loggingOut}
            onPress={handleLogout}
          />
        </View>
...
