appId: com.mony.app
---
- launchApp
- assertVisible: "Entrar"
- tapOn: "Não tem uma conta? Criar conta"
- assertVisible: "Criar sua conta"
- tapOn:
    id: "name-input"
- inputText: "Maestro Tester"
- tapOn:
    id: "email-input"
- inputRandomEmail

- tapOn:
    id: "password-input"
- inputText: "correcthorsebattery"
- tapOn:
    id: "password-confirmation-input"
- inputText: "correcthorsebattery"
- tapOn:
    id: "submit-button"
- assertVisible: "Maestro Tester"
